Kasutaja isendeid liigutades kasutatakse nüüd JSONi. Uus käivitusõpetus.